--- a/app/assets/stylesheets/articles/show.scss
+++ b/app/assets/stylesheets/articles/show.scss
@@ -1,6 +1,6 @@
-.p-items_wrapper {
+.articles_wrapper {
   background-color: #f6f6f4;
-  .p-items_container {
+  .articles_container {
     padding-top: 2.4rem;
     padding-bottom: 4rem;
     display: grid;
@@ -13,7 +13,7 @@
     width: calc(100% - 5rem);
     margin-right: auto;
     margin-left: auto;
-    .p-items_stickyMenu {
+    .articles_stickyMenu {
       position: -webkit-sticky;
       position: sticky;
       top: 20vh;
@@ -30,7 +30,7 @@
           font-size: 1.6rem;
           font-weight: 700;
           cursor: pointer;
-          color: #55c500;
+          color: #F4AC5A;
         }
       }
       .it-Actions_item-like {
@@ -45,12 +45,16 @@
           height: 100%;
           width: 100%;
           font-size: 2rem;
-          color: #55c500;
+          color: #F4AC5A;
           background-color: #fff;
-          border: 0.2rem solid #55c500;
+          border: 0.2rem solid #F4AC5A;
           border-radius: 50%;
           outline: none;
-      }
+        }
+        .article-unlike-button{
+          color: #FFF;
+          background-color: #F4AC5A;
+        }
       }
       .it-Actions_item-favorite {
         width: 5rem;
@@ -112,14 +116,14 @@
         cursor: pointer;
       }
     }
-    .p-items_main {
+    .articles_main {
       grid-column: 2 / 3;
       -ms-grid-column: 2;
       grid-row: 1 / 3;
       -ms-grid-row: 1;
       -ms-grid-row-span: 3;
       padding: 1.6rem 15rem;
-      .p-items_article {
+      .articles_article {
         background-color: #fff;
         padding: 3.2rem;
         .it-Header {
@@ -251,12 +255,20 @@
           }
         }
         .it-MdContent {
-          font-size: 1.6rem;
+          font-size: 1.8rem;
           color: #333;
           word-wrap: break-word;
           word-break: break-all;
           .it-MdContent>:first-child {
             margin-top: 0;
+          }
+          img{
+            margin: 1.5em 0;
+            max-width: 100%;
+            width:100%;
+          }
+          p{
+            line-height: 1.9;
           }
         }
 
@@ -307,7 +319,7 @@
                 flex-grow: 1;
                 min-width: 8.5rem;
                 height: 3.2rem;
-                color: #59bb0c;
+                color: #F4AC5A;
                 background-color: #fff;
                 border: 0.1rem solid #ccc;
                 border-radius: .2em;
@@ -319,6 +331,10 @@
                 .it-Footer_likeLabel {
                   font-size: 1.4rem;
                 }
+              }
+              .article-unlike-button{
+                color: #FFF;
+                background-color: #F4AC5A;
               }
               .LikeButton__balloon {
                 position: relative;
@@ -491,7 +507,7 @@
         }
       }
   }
-  .p-items_options {
+  .articles_options {
     grid-column: 3 / 4;
     -ms-grid-column: 3;
     -ms-grid-column-span: 4;
@@ -505,7 +521,7 @@
       }
     }
     }
-  .p-items_toc {
+  .articles_toc {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -544,7 +560,7 @@
       }
     }
     }
-    .p-items_toc, .p-items_rightDummy {
+    .articles_toc, .articles_rightDummy {
       width: 30rem;
       grid-column: 3 / 4;
       -ms-grid-column: 3;
@@ -554,51 +570,55 @@
       -ms-grid-row-span: 3;
       max-height: 100vh;
   }
+  .p-button:focus{
+    outline:0;
+  }
+
  //画面サイズごとの出し分け
 @media (max-width: 1200px){
-  .p-items_stickyMenu, .p-items_leftDummy {
+  .articles_stickyMenu, .articles_leftDummy {
     display: none;
   }
-  .p-items_container {
+  .articles_container {
     grid-template-columns: 8rem calc(100% - 8rem - 30rem) 30rem;
     -ms-grid-columns: 8rem calc(100% - 8rem - 30rem) 30rem;
     max-width: 100rem;
     width: auto;
   }
-  .p-items_main {
+  .articles_main {
     grid-column: 1 / 3;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
   }
 }
 @media (max-width: 991px){
-  .p-items_wrapper .p-items_article {
+  .articles_wrapper .articles_article {
     max-width: 72rem;
     margin: 0 auto;
   }
-  .p-items_options, .p-items_wrapper .p-items_toc, .p-items_wrapper .p-items_rightDummy {
+  .articles_options, .articles_wrapper .articles_toc, .articles_wrapper .articles_rightDummy {
     display: none;
   }
-  .p-items_main {
+  .articles_main {
     grid-column: 1 / 4;
     -ms-grid-column: 1;
     -ms-grid-column-span: 4;
     padding: 1.6rem;
   }
-  .p-items_stickyMenu, .p-items_leftDummy {
+  .articles_stickyMenu, .articles_leftDummy {
     margin-left: 1.6rem;
     width: 7.4rem;
   }
 }
 @media (max-width: 770px){
-  .p-items_wrapper .p-items_article {
+  .articles_wrapper .articles_article {
     padding: 1.6rem 1.6rem 3.2rem;
     margin: 0 0.8rem;
   }
-  .p-items_main {
+  .articles_main {
     padding: 1.6rem;
   }
-  .p-items_container {
+  .articles_container {
     display: block;
   }
 }
