非ログイン対応

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -138,15 +138,15 @@
                     =@article.user.profile.description
                 // フォロー機能実装時使用
               .ai-User_footer
-                -unless current_user.id == @article.user.id
-                  %span.userFollowButton{data:{id:"#{@article.user.id}"}}
-                    -if @relation.nil?
-                      %button.btn.btn-default.btn-block.userFollowButton_inner.btn-xs
-                        %i.i.fa.fa-user-plus
-                        フォロー
-                    -else
-                      %button.btn.btn-primary.btn-block.userUnfollowButton_inner.btn-xs
-                        フォロー中
+                -# -unless current_user.id == @article.user.id
+                %span.userFollowButton{data:{id:"#{@article.user.id}"}}
+                  -if @relation.nil?
+                    %button.btn.btn-default.btn-block.userFollowButton_inner.btn-xs
+                      %i.i.fa.fa-user-plus
+                      フォロー
+                  -else
+                    %button.btn.btn-primary.btn-block.userUnfollowButton_inner.btn-xs
+                      フォロー中
       //見出しごとのリンクを設定
       -# .articles_options
       -# .articles_toc
