--- a/app/assets/stylesheets/articles/show.scss
+++ b/app/assets/stylesheets/articles/show.scss
@@ -51,6 +51,9 @@
           border-radius: 50%;
           outline: none;
         }
+        button:focus {
+          outline:0;
+        }
         .article-unlike-button{
           color: #FFF;
           background-color: #F4AC5A;
@@ -71,10 +74,17 @@
           border-radius: 50%;
           color: #fff;
         }
-       .far.fa-star {
-        margin-top: 0.4rem;
-        margin-left: 0.2rem;
+        button:focus {
+          outline:0;
         }
+        .article-unfavorite-button{
+          background-color: #F4AC5A;
+          border: 0.1rem solid #F4AC5A;
+          .fas.fa-star {
+            color:#FFFF01;
+          }
+        }
+
       }
       .it-Actions_jumpToCommentButton {
         margin-top: 4.5rem;
@@ -290,8 +300,6 @@
               margin-bottom: 1.6rem;
               button {
                 color: #fff;
-                border: 0.1rem solid #777;
-                border-radius: 0.4rem;
                 background-color: #777;
                 font-size: 1.6rem;
                 height: 100%;
@@ -304,6 +312,15 @@
               }
               .it-Footer_favoriteLabel {
                 font-size: 1.4rem;
+              }
+              .article-unfavorite-button{
+                background-color: #F4AC5A;
+                border: 0.1rem solid #F4AC5A;
+                .fas.fa-star {
+                  color:#FFFF01;
+                  padding-top: 0.4rem;
+                  padding-left: 0.2rem;
+                }
               }
             }
             .it-Footer_like {
