--- a/app/assets/stylesheets/articles/new.scss
+++ b/app/assets/stylesheets/articles/new.scss
@@ -129,8 +129,13 @@
         .editorPreview_panel {
           padding: 0.375rem 0.75rem;
           height: calc(100% - 3.8rem);
+          overflow: scroll;
+          word-break: break-word;  //これがいいよ！
           #marked-area {
             font-size:1.6rem;
+            img {
+              width: 100%;
+            }
           }
         }
       }
