公開プロフィールページ実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 
 // profiles
 @import "profiles/edit";
+@import "profiles/show";
 
-@import "homes";
-@import 'inquiry'
+// top
+@import "homes";@import 'inquiry'
