--- a/app/views/inquiry/confirm.html.haml
+++ b/app/views/inquiry/confirm.html.haml
@@ -1,3 +1,5 @@
+= render "shared/header"
+
 .page-header
   %h1 お問い合わせ
 = form_for @inquiry, :url => inquiry_complete_path do |f|
@@ -18,3 +20,5 @@
         = f.hidden_field :message
         = simple_format(@inquiry.message)
   = f.submit '送信', :class => 'btn btn-primary'
+
+= render "shared/footer"
