--- a/app/views/inquiry/confirm.html.haml
+++ b/app/views/inquiry/confirm.html.haml
@@ -2,7 +2,7 @@
 
 .page-header
   %h1 お問い合わせ
-= form_for @inquiry, :url => inquiry_complete_path do |f|
+= form_for @inquiry, url: inquiry_complete_path do |f|
   %table.table
     %tr
       %th 名前
@@ -19,6 +19,6 @@
       %td
         = f.hidden_field :message
         = simple_format(@inquiry.message)
-  = f.submit '送信', :class => 'btn btn-primary'
+  = f.submit '送信', class: 'btn btn-primary'
 
 = render "shared/footer"
