--- a/app/views/inquiry/index.html.haml
+++ b/app/views/inquiry/index.html.haml
@@ -1,11 +1,11 @@
 = render "shared/header"
 
 .inquiry-form
-  = form_for @inquiry, :url => inquiry_confirm_path do |f|
+  = form_for @inquiry, url: inquiry_confirm_path do |f|
     .page-header
       %h1 お問い合わせ
     - if @inquiry.errors.any?
-      .alert.alert-danger{:role => "alert"}
+      .alert.alert-danger{role: "alert"}
         %strong 入力内容にエラーがあります
         %ul
           - @inquiry.errors.each do |attr, msg|
